# tf-avm-agent

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW_ISSUE.md  GITHUB_ISSUE_CONTENT.md  LICENSE  README.md  SKILL.md  UPGRADE_NOTES.md  apm.yml  pyproject.toml
.apm/agents/: terraform-expert.agent.md
.apm/context/: architecture.context.md
.apm/instructions/: python.instructions.md  terraform.instructions.md
.apm/prompts/: add-avm-module.prompt.md  analyze-diagram.prompt.md  generate-terraform.prompt.md
.github/workflows/: ci.yml  deploy-web.yml  release.yml
deploy/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: agent-lightning-implementation-plan.md  apm-integration-analysis.md
examples/: ai_agent_usage.py  basic_usage.py
src/tf_avm_agent/: __init__.py  agent.py  api.py  cli.py
src/tf_avm_agent/lightning/: __init__.py  ab_testing.py  config.py  dataset.py  rewards.py  self_correction.py  telemetry.py  train.py
src/tf_avm_agent/registry/: __init__.py  avm_modules.py  module_discovery.py  published_modules.py  version_fetcher.py
src/tf_avm_agent/tools/: __init__.py  avm_lookup.py  diagram_analyzer.py  terraform_generator.py  terraform_utils.py
tests/: __init__.py  conftest.py  test_agent_framework_1_0_1.py  test_avm_lookup.py  test_cli_chat.py  test_cli_json_output.py  test_lightning_dataset.py  test_lightning_integration.py  test_lightning_rewards.py  test_lightning_self_correction.py  test_lightning_telemetry.py  test_registry.py  test_system_prompt.py  test_terraform_generator.py  test_version_fetcher.py
web/: .env.example  .gitignore  CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  MessageList.tsx
web/src/components/code/: CodeActions.tsx  CodeViewer.tsx  FileTree.tsx
web/src/components/diagram/: DiagramPreview.tsx  DiagramUpload.tsx
web/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
web/src/components/services/: ServiceCard.tsx  ServiceSelector.tsx
web/src/components/ui/: dialog.tsx  tabs.tsx  toast.tsx
web/src/hooks/: useChat.ts  useGenerate.ts  useModules.ts  useTheme.ts
web/src/lib/: api.ts
web/src/types/: index.ts
